--- a/src/Login.form
+++ b/src/Login.form
@@ -57,19 +57,14 @@
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Group type="102" attributes="0">
-                                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                      <Component id="username" max="32767" attributes="0"/>
-                                      <Component id="password" pref="253" max="32767" attributes="0"/>
-                                      <Component id="usertype" alignment="0" min="-2" pref="104" max="-2" attributes="0"/>
-                                  </Group>
-                                  <EmptySpace max="32767" attributes="0"/>
+                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                  <Component id="username" max="32767" attributes="0"/>
+                                  <Component id="password" pref="253" max="32767" attributes="0"/>
+                                  <Component id="usertype" alignment="0" min="-2" pref="104" max="-2" attributes="0"/>
                               </Group>
-                              <Group type="102" attributes="0">
-                                  <Component id="login" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace min="-2" pref="53" max="-2" attributes="0"/>
-                              </Group>
+                              <Component id="login" min="-2" max="-2" attributes="0"/>
                           </Group>
+                          <EmptySpace max="32767" attributes="0"/>
                           <Component id="cancel" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="64" max="-2" attributes="0"/>
                       </Group>
@@ -202,10 +197,11 @@
         <Component class="javax.swing.JComboBox" name="usertype">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="3">
-                <StringItem index="0" value=" "/>
+              <StringArray count="4">
+                <StringItem index="0" value=""/>
                 <StringItem index="1" value="Admin"/>
                 <StringItem index="2" value="Normal"/>
+                <StringItem index="3" value="Student"/>
               </StringArray>
             </Property>
           </Properties>
