--- a/src/user.form
+++ b/src/user.form
@@ -436,10 +436,11 @@
               <Font name="Tahoma" size="18" style="1"/>
             </Property>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="3">
-                <StringItem index="0" value=" "/>
+              <StringArray count="4">
+                <StringItem index="0" value=""/>
                 <StringItem index="1" value="Admin"/>
                 <StringItem index="2" value="Normal"/>
+                <StringItem index="3" value="Student"/>
               </StringArray>
             </Property>
           </Properties>
